--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>
                 <h4>THIS PROJECT IS REGARDING IMAGE</h4>
                 <a href="./IMAGE ELEMENT.html"> 
-                    <img src="./4.3 HTML Porfolio Project/ALL PROJECTS/image element/image.png"
+                    <img src="./image.png"
                     width="200px"
                     height="200px"
                     alt="Click here to see the project">
@@ -39,7 +39,7 @@
             <li>
                 <h4>THIS PROJECT IS REGARDING TOP FIVE MOVIES</h4>
                 <a href="./Top_5_movie.html"> 
-                    <img src="./4.3 HTML Porfolio Project/ALL PROJECTS/TOP 5 MOVIES/movie.png"
+                    <img src="./movie.png"
                     width="200px"
                     height="200px"
                     alt="Click here to see the project">
@@ -49,7 +49,7 @@
             <li>
                 <h4>THIS PROJECT IS REGARDING ALL THE ANIMALS</h4>
                 <a href="./project_all_animal_pic.html">
-                    <img src="./4.3 HTML Porfolio Project/ALL PROJECTS/ALL ANIMAL/All animal.png"
+                    <img src="./All animal.png"
                     width="200px"
                     height="200px"
                     alt="Click here to see the project">
@@ -59,7 +59,7 @@
             <li>
                 <h4>THIS PROJECT IS REGARDING MY BRITHDAY</h4>
                 <a href="./project_of_hmtl_birthday.html">
-                    <img src="./4.3 HTML Porfolio Project/ALL PROJECTS/ITS MY BDAY/birthday.png"
+                    <img src="./birthday.png"
                     width="200px"
                     height="200px"
                     alt="Click here to see the project">
@@ -69,7 +69,7 @@
             <li>
                 <h4>THIS PROJECT IS REGARDING MY WEBPAGE</h4>
                 <a href="./webpage_project.html">
-                    <img src="./4.3 HTML Porfolio Project/ALL PROJECTS/WEBPAGE/webpage.png"
+                    <img src="./webpage.png"
                     width="200px"
                     height="200px"
                     alt="Click here to see the project">
